--- a/cupti/02_profiling_injection/analysis/PC_telemetry.ipynb
+++ b/cupti/02_profiling_injection/analysis/PC_telemetry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# df.set_index('timestamp', inplace=True)\n",
+    "\n",
+    "# per_second = df.groupby(pd.Grouper(freq='1S')).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,31 +53,18 @@
       "../data/postprocessed/PC/backprop_20.csv\n",
       "../data/postprocessed/PC/backprop_80.csv\n",
       "../data/postprocessed/PC/gaussian_10.csv\n",
-      "../data/postprocessed/PC/gpuburn_15.csv\n",
-      "../data/postprocessed/PC/backprop_100.csv\n",
-      "../data/postprocessed/PC/lenet_50.csv\n",
-      "../data/postprocessed/PC/lenet_3.csv\n",
-      "../data/postprocessed/PC/gpuburn_50.csv\n",
-      "../data/postprocessed/PC/gaussian_20.csv\n",
-      "../data/postprocessed/PC/gpuburn_80.csv\n",
-      "../data/postprocessed/PC/lenet_1.csv\n",
-      "../data/postprocessed/PC/gpuburn_10.csv\n",
-      "../data/postprocessed/PC/backprop_7.csv\n",
-      "../data/postprocessed/PC/gpuburn_1.csv\n",
-      "../data/postprocessed/PC/gaussian_1.csv\n",
-      "../data/postprocessed/PC/lenet_15.csv\n",
-      "../data/postprocessed/PC/gaussian_3.csv\n",
-      "../data/postprocessed/PC/lenet_5.csv\n",
-      "../data/postprocessed/PC/lenet_7.csv\n",
-      "../data/postprocessed/PC/gpuburn_100.csv\n",
-      "../data/postprocessed/PC/backprop_30.csv\n",
-      "../data/postprocessed/PC/gaussian_100.csv\n",
-      "../data/postprocessed/PC/gaussian_30.csv\n",
-      "../data/postprocessed/PC/lenet_10.csv\n",
-      "../data/postprocessed/PC/gaussian_50.csv\n",
-      "../data/postprocessed/PC/lenet_100.csv\n",
-      "../data/postprocessed/PC/lenet_20.csv\n",
-      "../data/postprocessed/PC/backprop_5.csv\n"
+      "../data/postprocessed/PC/gpuburn5min_1.csv\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'gpuburn5min'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 17\u001b[0m\n\u001b[1;32m     15\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(csv_full_path)\n\u001b[1;32m     16\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRange\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(csv_name\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m---> 17\u001b[0m     df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mApp_name\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mmapping_table\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcsv_name\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     18\u001b[0m     data_sheet_PC\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mconcat([data_sheet_PC, df], ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     20\u001b[0m data_sheet_telemetry \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame()\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'gpuburn5min'"
      ]
     }
    ],
